--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "DannyTharma",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "node": "^10.9.0"
   }
