--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
+    "mongoose": "^5.2.13",
     "node": "^10.9.0"
   }
 }
